formatted the tests